[heat] Add soft antiaffinity for db and app
Related-Prod: PRODX-3456
Change-Id: I9b4fd8141af35375ecc113490ea64031ed892444

--- a/heat-templates/fragments/AppInstances.yaml
+++ b/heat-templates/fragments/AppInstances.yaml
@@ -190,6 +190,12 @@ resources:
       - config: {get_resource: boot_config}
       - config: {get_resource: software_config_04}
 
+  app_group:
+   type: OS::Nova::ServerGroup
+   properties:
+     name:  "db-group"
+     policies: [ 'soft-anti-affinity' ]
+
   server-01:
     type: OS::Nova::Server
     properties:
@@ -202,6 +208,8 @@ resources:
       user_data_format: SOFTWARE_CONFIG
       user_data: { get_resource:  install_config_agent_01}
       tags: { get_param: server_tags }
+      scheduler_hints:
+        group: { get_resource: app_group }
 
   server-02:
     depends_on:
@@ -217,6 +225,8 @@ resources:
       user_data_format: SOFTWARE_CONFIG
       user_data: { get_resource:  install_config_agent_02}
       tags: { get_param: server_tags }
+      scheduler_hints:
+        group: { get_resource: app_group }
 
   server-03:
     depends_on:
@@ -232,6 +242,8 @@ resources:
       user_data_format: SOFTWARE_CONFIG
       user_data: { get_resource:  install_config_agent_03}
       tags: { get_param: server_tags }
+      scheduler_hints:
+        group: { get_resource: app_group }
 
   server-04:
     depends_on:
@@ -248,6 +260,8 @@ resources:
       user_data_format: SOFTWARE_CONFIG
       user_data: { get_resource:  install_config_agent_04}
       tags: { get_param: server_tags }
+      scheduler_hints:
+        group: { get_resource: app_group }
 
   private_server_01_port:
     type: OS::Neutron::Port
