--- a/heat-templates/fragments/AppInstances.yaml
+++ b/heat-templates/fragments/AppInstances.yaml
@@ -63,6 +63,10 @@ parameters:
     type: string
     description: Protocol for App loadbalancer
     default: HTTP
+  app_dns_zone_id:
+    type: string
+  app_dns_zone_name:
+    type: string
 
 conditions:
   deploy_additional_app_listener:
@@ -301,18 +305,24 @@ resources:
     properties:
       floating_network_id: { get_param: public_network_id }
       port_id: { get_resource: private_server_01_port }
+      dns_name: app01
+      dns_domain: { get_param: app_dns_zone_name }
 
   server_02_floating_ip:
     type: OS::Neutron::FloatingIP
     properties:
       floating_network_id: { get_param: public_network_id }
       port_id: { get_resource: private_server_02_port }
+      dns_name: app02
+      dns_domain: { get_param: app_dns_zone_name }
 
   server_03_floating_ip:
     type: OS::Neutron::FloatingIP
     properties:
       floating_network_id: { get_param: public_network_id }
       port_id: { get_resource: private_server_03_port }
+      dns_name: app03
+      dns_domain: { get_param: app_dns_zone_name }
 
   server_04_floating_ip:
     type: OS::Neutron::FloatingIP
@@ -320,6 +330,8 @@ resources:
     properties:
       floating_network_id: { get_param: public_network_id }
       port_id: { get_resource: private_server_04_port }
+      dns_name: app04
+      dns_domain: { get_param: app_dns_zone_name }
 
   wait_handle:
     type: OS::Heat::WaitConditionHandle
@@ -402,6 +414,14 @@ resources:
     properties:
       floating_network_id: {get_param: public_network_id}
       port_id: {get_attr: [lb, vip_port_id]}
+
+  app_vip_redcordset:
+    type: OS::Designate::RecordSet
+    properties:
+      name: app-vip
+      records: [ { get_attr: [ lb_floating, floating_ip_address ] } ]
+      type: A
+      zone: { get_param: app_dns_zone_id }
 
 outputs:
   app_private_ips:
