--- a/heat-templates/top.yaml
+++ b/heat-templates/top.yaml
@@ -67,6 +67,34 @@ parameters:
   dns_zone:
     type: string
     default: 'refapp.test.'
+  db_instance_01_az:
+    type: string
+    description: Availability zone of database instance 01
+    default: 'nova'
+  db_instance_02_az:
+    type: string
+    description: Availability zone of database instance 02
+    default: 'nova'
+  db_instance_03_az:
+    type: string
+    description: Availability zone of database instance 03
+    default: 'nova'
+  app_instance_01_az:
+    type: string
+    description: Availability zone of application instance 01
+    default: 'nova'
+  app_instance_02_az:
+    type: string
+    description: Availability zone of application instance 02
+    default: 'nova'
+  app_instance_03_az:
+    type: string
+    description: Availability zone of application instance 03
+    default: 'nova'
+  app_instance_04_az:
+    type: string
+    description: Availability zone of application instance 04
+    default: 'nova'
 
 resources:
   key_pair:
@@ -101,6 +129,9 @@ resources:
       public_network_id: { get_param: public_network_id }
       database_lb_algorithm: { get_param: database_lb_algorithm }
       app_database_password: { get_param: app_database_password }
+      instance_01_az: { get_param: db_instance_01_az }
+      instance_02_az: { get_param: db_instance_02_az }
+      instance_03_az: { get_param: db_instance_03_az }
 
   app:
     type: ./fragments/AppInstances.yaml
@@ -123,6 +154,10 @@ resources:
       app_database_password: { get_param: app_database_password }
       app_dns_zone_id: { get_attr: [network, app_dns_zone_id ] }
       app_dns_zone_name: { get_attr: [network, app_dns_zone_name ] }
+      instance_01_az: { get_param: app_instance_01_az }
+      instance_02_az: { get_param: app_instance_02_az }
+      instance_03_az: { get_param: app_instance_03_az }
+      instance_04_az: { get_param: app_instance_04_az }
 
 outputs:
   database_private_ips:
