--- a/heat-templates/tf/top.yaml
+++ b/heat-templates/tf/top.yaml
@@ -174,6 +174,7 @@ resources:
       instance_02_az: { get_param: app_instance_02_az }
       instance_03_az: { get_param: app_instance_03_az }
       instance_04_az: { get_param: app_instance_04_az }
+      designate_app_dns_zone_id: { get_attr: [ network, designate_app_dns_zone_id ] }
 
   app_floatings:
     type: ./fragments/AppFloatings.yaml
