--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,14 +13,16 @@ services:
     build: .
     environment:
       OS_REFAPP_DB_URL: mysql+pymysql://refapp:supersecret@database:3306/refapp
+    volumes:
+      - ./wait-for:/wait-for:ro
     entrypoint:
-      - "./wait-for"
+      - "/wait-for"
       - "database:3306"
       - "--timeout=60"
       - "--"
       - "gunicorn"
       - "-c"
-      - "gunicorn.conf.py"
+      - "/opt/app/gunicorn.conf.py"
       - "openstack_refapp.app:create_app()"
     ports:
       - "8000:8000"
