--- a/heat-templates/ovn-env.yaml
+++ b/heat-templates/ovn-env.yaml
@@ -1,4 +1,6 @@
 parameters:
+  app_lb_provider: ovn
   app_lb_algorithm: SOURCE_IP_PORT
   app_lb_protocol: TCP
+  database_lb_provider: ovn
   database_lb_algorithm: SOURCE_IP_PORT
